// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLockFile catches errors 1`] = `Array []`;

exports[`generateLockFile finds npm embedded in renovate 1`] = `Array []`;

exports[`generateLockFile finds npm globally 1`] = `Array []`;

exports[`generateLockFile generates lock files 1`] = `
Array [
  Object {
    "cmd": "node node_modules/npm/bin/npm-cli.js dedupe",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`generateLockFile performs full install 1`] = `Array []`;

exports[`generateLockFile performs lock file updates 1`] = `
Array [
  Object {
    "cmd": "node node_modules/npm/bin/npm-cli.js install --package-lock-only --no-audit some-dep@1.0.1",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
    },
  },
]
`;

exports[`generateLockFile performs npm-shrinkwrap.json updates (no package-lock.json) 1`] = `Array []`;

exports[`generateLockFile performs npm-shrinkwrap.json updates 1`] = `Array []`;

exports[`generateLockFile uses fallback npm 1`] = `Array []`;
